feature: distribution endpoint
